# dotfiles

./: .gitignore  .gtkrc-2.0  README.md  brave-flags.conf  install.sh
ags/: options.ts
alacritty/: alacritty.yml
anyrun/: config.ron  dictionary.ron  plugins  style.css
bat/: config
ghostty/: config
gtk-3.0/: bookmarks  settings.ini
hypr/: hypridle.conf  hyprland.conf  hyprland.conf.bak  hyprlock.conf  hyprpaper.conf
hypr/scripts/: wallpaper.sh
kitty/: kitty.conf
mango/: config.conf  trillian.conf
nvim/: README.md  init.lua
nvim/after/ftplugin/: lua.lua  rust.lua
nvim/after/lsp/: luals.lua
nvim/after/plugin/: colors.lua  keymaps.lua
nvim/colors/: turbo.lua
nvim/lsp/: bash_ls.lua  lua_ls.lua  python_ls.lua  qmlls.lua  rust_analyzer.lua  wgsl_analyzer.lua
nvim/lua/: autocommands.lua  breadcrumbs.lua  default.lua  keymappings.lua  lazy-plugins.lua  lsp.lua  packer_init.lua  plugins.lua
nvim/lua/breadcrumbs/: fs.lua  init.lua  lsp.lua  treesitter.lua
nvim/lua/config/: cmp.lua  colors.lua  colorscheme.lua  dressing.lua  init.lua  lsp.lua  lualine.lua  mappings.lua  mason.lua  mdeval.lua  neotest.lua  neotree.lua  options.lua  rust.lua  settings.lua  telescope.lua  treesitter.lua  treesitter_context.lua
nvim/lua/debug/: init.lua
nvim/lua/lsp_lua/: init.lua
nvim/lua/nvim-cmp/: init.lua
nvim/lua/nvim-telescope/: init.lua
nvim/lua/nvim-yabs/: init.lua
nvim/lua/plugins/: LspUI.lua  aerial.lua  arrow.lua  blink.lua  cmp-tabnine.lua  cmp.lua  codecompanion.lua  codeium.lua  colorizer.lua  conform.lua  cutlass.lua  cybu.lua  dap.lua  dapui.lua  dressing.lua  dropbar.lua  elektron.lua  flash.lua  fzf-lua.lua  gh-actions.lua  gitsigns.lua  hardtime.lua  icon-picker.lua  indent-blankline.lua  init.lua  kommentary.lua  lastplace.lua  lazydev.lua  lsp-lens.lua  lsp-lines.lua  lsp.lua  lsp.lua.old  lspsaga.lua  luasnip.lua  lungan.lua  mason.lua  mcphub.lua  model.lua  navic.lua  neo-tree.lua  (+35 more)
nvim/lua/treesitter/: init.lua
nvim/lua/turbo/: init.lua
nvim/lua/utils/: init.lua
quickshell/: Chat.qml  Globals.qml  Theme.qml  shell.qml  test.json
quickshell/bar/: Bar.qml  BarText.qml  Tooltip.qml
quickshell/bar/blocks/: ActiveWorkspace.qml  Battery.qml  CpuLoad.qml  Icon.qml  KeyboardLayout.qml  Load.qml  Logout.qml  Memory.qml  Sound.qml  SystemTray.qml  Temperature.qml  Time.qml  Workspaces.qml
quickshell/config/: Config.qml
quickshell/extensions/: AiPlugin.cpp  AiPlugin.h  CMakeLists.txt  PamAuth.cpp  PamAuth.h  WaylandPower.cpp  WaylandPower.h  wlr-output-power-management-unstable-v1.xml
quickshell/js/: YamlLoader.js
quickshell/modules/: AppLauncher.qml  AppList.qml  ChatWindow.qml  LockScreen.qml  NotificationPopup.qml  NotificationToast.qml  SidebarLeft.qml.bak  VolumeOSD.qml  Wallpaper.qml  Wrapper.qml
quickshell/modules/chat/: ChatWindow.qml
quickshell/modules/logout/: Logout.qml  LogoutButton.qml  LogoutMenu.qml
quickshell/services/: Battery.qml  Idle.qml  SystemUsage.qml
quickshell/services/Compositor/: CompositorService.qml  HyprlandService.qml  LabwcService.qml  MangoService.qml  NiriService.qml  SwayService.qml
quickshell/wlogout/: Logout.qml  LogoutMenu.qml  WLogout.qml
starship/: config.toml
sway/: config  logout.sh  sway
sway/conf.d/: marvin  trillian
sway/marvin/: config
themes/: themes
waybar/: config  config.jsonc  style.css  waybar
waybar/conf.d/: marvin  trillian
waybar/marvin/: config  style.css
wezterm/: wezterm.lua
wleave/: style.css
wofi/: config  wofi
(+7 files in other folders)
